examples/errors/wrongfuncall.dvx
int bla(int a, int b) {

}

int main() {
  bla(1,2);
  something();
}
